[gd_scene load_steps=43 format=2]

[ext_resource path="res://Sprite/Dumi/idle.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Dumi/run.png" type="Texture" id=2]
[ext_resource path="res://Script/Dumi.gd" type="Script" id=3]
[ext_resource path="res://Sprite/Dumi/full jump.png" type="Texture" id=4]
[ext_resource path="res://Sprite/Dumi/ledge grab.png" type="Texture" id=5]
[ext_resource path="res://Sprite/Objects/box.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 23, 34 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 23, 0, 23, 34 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 46, 0, 23, 34 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 69, 0, 23, 34 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 92, 0, 23, 34 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 115, 0, 23, 34 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 138, 0, 23, 34 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 161, 0, 23, 34 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 21, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 42, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 63, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 84, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 105, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 126, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 147, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 189, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 210, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 231, 0, 21, 35 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 22, 0, 22, 38 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 22, 42 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 22, 0, 22, 42 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 44, 0, 22, 42 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 66, 0, 22, 42 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 88, 0, 22, 42 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 110, 0, 22, 42 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 22, 38 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 44, 0, 22, 38 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 66, 0, 22, 38 )

[sub_resource type="GDScript" id=31]

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "Jump2",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "LedgeGrab",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ) ],
"loop": true,
"name": "Jump1",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "Fall1",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ) ],
"loop": true,
"name": "Fall2",
"speed": 5.0
} ]
script = SubResource( 31 )

[sub_resource type="CapsuleShape2D" id=36]
radius = 6.0
height = 19.0

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 6, 10.5 )

[sub_resource type="SegmentShape2D" id=34]
b = Vector2( 0, 32 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 13, 11 )

[node name="Dumi" type="KinematicBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="DumiSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 32 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 36 )

[node name="DumiCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 33 )

[node name="WalljumpTimer" type="Timer" parent="."]

[node name="FloorArea" type="Area2D" parent="."]
visible = false

[node name="FloorColision" type="CollisionShape2D" parent="FloorArea"]
shape = SubResource( 34 )

[node name="WallArea" type="Area2D" parent="."]
visible = false

[node name="WallCollision" type="CollisionShape2D" parent="WallArea"]
rotation = 1.5708
shape = SubResource( 35 )

[node name="Camera" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 0.2, 0.2 )
process_mode = 0
limit_left = 0
limit_bottom = 216
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="BoxDetectionR" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 9 )
enabled = true
cast_to = Vector2( 15, 0 )

[node name="BoxDetectionL" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 9 )
enabled = true
cast_to = Vector2( -15, 0 )

[node name="HeldBox" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 6 )
[connection signal="timeout" from="WalljumpTimer" to="." method="_on_Timer_timeout"]
